[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-builder"
version = "0.1.0"
description = "Build M4B audiobooks for Apple Books from text or audio files"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "PyMuPDF>=1.23",
]

[project.scripts]
audiobook-builder = "audiobook_builder.cli:cli"
